--- a/src/assets/star.css
+++ b/src/assets/star.css
@@ -1,15 +1,3 @@
-#main {
-    width: 100%;
-    height: 940px;
-    background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 0.2) 43.78%,
-        rgba(238, 187, 195, 0) 100%
-      ),
-      #232946;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  
   .night {
     position: fixed;
     width: 100%;
@@ -18,6 +6,7 @@
     left: -5px;
     -webkit-transform: rotateZ(-30deg);
     transform: rotateZ(-30deg);
+    z-index: 1;
   }
   
   .shooting_star {
